# mlops-homewrk

./: .env.example  .gitignore  README.md  requirements.txt
k8s/: deployment.yaml  ingress.yaml  ip_service.yaml
notebooks/chaos/: ab_test.ipynb  load_to_s3.ipynb  model_traning.ipynb  train.ipynb
notebooks/reports/: fraud_data_cleaning.ipynb
src/: Dockerfile  docker-compose.yml  pyproject.toml
src/app/: config.py  inference.py  main.py  models.py
src/scripts/: airflow_inference.py  clean_fraud_data.py  data_proc_airflow_dag.py  inference.py  kafka_producer.py  preprocessing_script.py  preprocessing_script_v1.py  s3loader.py  test_service.py  train.py
